tests/rosetta/out/Java/4-rings-or-4-squares-puzzle.error
javac error: exit status 1
/tmp/TestMochiToJava4-rings-or-4-squares-puzzle968971638/001/M4RingsOr4SquaresPuzzle.java:28: error: cannot find symbol
    static Map<String,any> getCombs(int low, int high, boolean unique) {
                      ^
  symbol:   class any
  location: class M4RingsOr4SquaresPuzzle
/tmp/TestMochiToJava4-rings-or-4-squares-puzzle968971638/001/M4RingsOr4SquaresPuzzle.java:60: error: cannot find symbol
        return new CountList(count, valid);
                   ^
  symbol:   class CountList
  location: class M4RingsOr4SquaresPuzzle
/tmp/TestMochiToJava4-rings-or-4-squares-puzzle968971638/001/M4RingsOr4SquaresPuzzle.java:68: error: cannot find symbol
    Map<String,any> r1 = getCombs(1, 7, true);
               ^
  symbol:   class any
  location: class M4RingsOr4SquaresPuzzle
/tmp/TestMochiToJava4-rings-or-4-squares-puzzle968971638/001/M4RingsOr4SquaresPuzzle.java:71: error: cannot find symbol
    Map<String,any> r2 = getCombs(3, 9, true);
               ^
  symbol:   class any
  location: class M4RingsOr4SquaresPuzzle
/tmp/TestMochiToJava4-rings-or-4-squares-puzzle968971638/001/M4RingsOr4SquaresPuzzle.java:74: error: cannot find symbol
    Map<String,any> r3 = getCombs(0, 9, false);
               ^
  symbol:   class any
  location: class M4RingsOr4SquaresPuzzle
5 errors
